Create enum and char array with parameter names
This is handy for the user and avoids having a model function which
returns the names of all parameters.

--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -34,6 +34,7 @@ namespace @ModelName@_info {
 @particleMultiplicity@
 @particleNames@
 @particleLaTeXNames@
+@parameterNames@
 }
 
 @ModelName@_spectrum_plotter::@ModelName@_spectrum_plotter()
