--- a/templates/NMSSM/FlexibleSUSY.m.in
+++ b/templates/NMSSM/FlexibleSUSY.m.in
@@ -3,7 +3,13 @@ FSModelName = "@CLASSNAME@";
 
 (* CNMSSM input parameters *)
 
-InputParameters = { m0, m12, TanBeta, Azero, LambdaInput };
+MINPAR = { {1, m0},
+           {2, m12},
+           {3, TanBeta},
+           {5, Azero}
+         };
+
+EXTPAR = { {61, LambdaInput} };
 
 DefaultParameterPoint = {
     {m0, 200},
