add writer class to the model-specific SLHA reader

--- a/templates/utilities.hpp.in
+++ b/templates/utilities.hpp.in
@@ -90,6 +90,7 @@ public:
 
    void fill(QedQcd& qedqcd) const { slha_io.fill(qedqcd); }
    void fill(@ModelName@_input_parameters&) const;
+   void write_to_file(const std::string& file_name) { slha_io.write_to_file(file_name); }
 
    static void fill_minpar_tuple(@ModelName@_input_parameters&, int, double);
    static void fill_extpar_tuple(@ModelName@_input_parameters&, int, double);
