--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -117,8 +117,8 @@ void @ModelName@_spectrum_plotter::write_spectrum(const TSpectrum& spectrum, std
    }
 }
 
-@ModelName@_slha_io::@ModelName@_slha_io(const std::string& input_filename_)
-   : slha_io(input_filename_)
+@ModelName@_slha_io::@ModelName@_slha_io()
+   : slha_io()
 {
 }
 
