--- a/templates/run_low_scale_model.cpp.in
+++ b/templates/run_low_scale_model.cpp.in
@@ -47,6 +47,7 @@ int main(int argc, const char* argv[])
       return options.status();
 
    const std::string slha_input_file(options.get_slha_input_file());
+   const std::string slha_output_file(options.get_slha_output_file());
    @ModelName@_slha_io slha_io;
    QedQcd oneset;
    @ModelName@_input_parameters input;
@@ -77,7 +78,7 @@ int main(int argc, const char* argv[])
       solver.solve();
       model.run_to(susy_scale_constraint.get_scale());
       model.calculate_spectrum();
-      model.print(std::cout);
+      slha_io.write_to_file(slha_output_file);
       // @ModelName@_spectrum_plotter plotter;
       // plotter.extract_spectrum(model);
       // plotter.write_to_file("@ModelName@_spectrum.dat");
