--- a/templates/two_scale_model.hpp.in
+++ b/templates/two_scale_model.hpp.in
@@ -54,6 +54,7 @@ public:
    void set_number_of_mass_iterations(std::size_t);
    double get_ewsb_iteration_precision() const;
    const @ModelName@_physical& get_physical() const;
+   const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& get_problems() const;
    int solve_ewsb_tree_level();
    int solve_ewsb_one_loop();
 
