--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -228,6 +228,7 @@ int main(int argc, const char* argv[])
       // runner.write_spectrum();
    }
 
+   slha_io.set_spinfo(runner.get_problems());
    slha_io.write_to_file(slha_output_file);
 
    return 0;
