--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -25,6 +25,7 @@
 #include "lowe.h"
 
 #include <fstream>
+#include <sstream>
 #include <iostream>
 #include <iomanip>
 #include <cassert>
@@ -115,12 +116,16 @@ void @ModelName@_spectrum_plotter::write_spectrum(const TSpectrum& spectrum, std
 {
 }
 
+void @ModelName@_slha_io::set_spinfo(const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& problems)
+{
+   std::stringstream serious_problems;
+   problems.print(serious_problems);
+
+   slha_io.set_spinfo("", serious_problems.str());
+}
+
 void @ModelName@_slha_io::write_to_file(const std::string& file_name)
 {
-   std::vector<std::string> warnings;
-   std::vector<std::string> serious_problems;
-
-   slha_io.set_spinfo(warnings, serious_problems);
    slha_io.write_to_file(file_name);
 }
 
