--- a/templates/utilities.hpp.in
+++ b/templates/utilities.hpp.in
@@ -83,6 +83,7 @@ public:
    void fill(QedQcd& qedqcd) const { slha_io.fill(qedqcd); }
    void fill(@ModelName@_input_parameters&) const;
    void read_from_file(const std::string& file_name) { slha_io.read_from_file(file_name); }
+   void set_spinfo(const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>&);
    void write_to_file(const std::string&);
    void write_to_stream(std::ostream& ostr = std::cout) { slha_io.write_to_stream(ostr); }
 
