--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -49,6 +49,10 @@ namespace flexiblesusy {
 #define MODELPARAMETER(p) model.get_##p()
 #define FORMAT_MASS(pdg,mass,name) \
    boost::format(mass_formatter) % pdg % mass % name
+#define FORMAT_MIXING_MATRIX(i,k,entry,name)                            \
+   boost::format(mixing_matrix_formatter) % i % k % entry % name
+#define FORMAT_ELEMENT(pdg,value,name)                                  \
+   boost::format(single_element_formatter) % pdg % value % name
 
 @ModelName@_spectrum_plotter::@ModelName@_spectrum_plotter()
    : spectrum()
